--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['7.3', '7.4', '8.0']
+        php-versions: ['7.3', '7.4', '8.0', '8.1']
         composer-versions: ['composer:v1', 'composer:v2']
 
     steps:
@@ -47,14 +47,13 @@ jobs:
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
 
-      - name: Run Grumphp
-        run: vendor/bin/grumphp run --no-ansi -n
-
-      - name: Send PSALM data
-        run: vendor/bin/psalm --shepherd --stats src/
-        continue-on-error: true
+      - name: Run tests
+        run: |
+          composer run analyse
+          composer run lint
+          composer run test
 
       - name: Send Scrutinizer data
         run: |
