--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
     "require": {
         "php": ">= 7.3",
         "phpspec/phpspec": "^6.0 || ^7.0",
-        "phpunit/php-code-coverage": "^9.0"
+        "phpunit/php-code-coverage": "^9.2 || ^10.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.5",
