--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -4,19 +4,11 @@ on:
   - pull_request
   - push
 
-name: "Continuous Integration"
+name: "Test Coverage"
 
 jobs:
   run:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      fail-fast: true
-      matrix:
-        operating-system: [ubuntu-latest, windows-latest, macOS-latest]
-        php-versions: ['7.3', '7.4', '8.0', '8.1']
-        composer-versions: ['composer:v1', 'composer:v2']
-        dependencies: ["lowest", "highest"]
-
+    runs-on: ubuntu-latest
     steps:
       - name: Set git to use LF
         run: |
@@ -31,9 +23,8 @@ jobs:
       - name: Install PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
-          tools: ${{ matrix.composer-versions }}
-          extensions: xdebug
+          php-version: 8.1
+          extensions: pcov
 
       - name: Get Composer Cache Directory
         id: composer-cache
@@ -48,11 +39,11 @@ jobs:
 
       - name: "Install dependencies"
         uses: "ramsey/composer-install@v2"
-        with:
-          dependency-versions: "${{ matrix.dependencies }}"
 
       - name: Run tests
-        run: |
-          composer run analyse
-          composer run lint
-          composer run test
+        run: composer run test-coverage
+
+      - name: Upload Scrutinizer coverage
+        uses: sudo-bot/action-scrutinizer@latest
+        with:
+          cli-args: "--format=php-clover coverage/clover.xml"
