--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
         ]
     },
     "scripts": {
-        "analyse": "phpstan analyse --level 8 src",
+        "analyse": "phpstan analyse",
         "lint": "php-cs-fixer fix --dry-run src && php-cs-fixer fix --dry-run spec",
         "test": "phpspec run --no-coverage",
         "test-coverage": "phpspec run"
