--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "require": {
         "php": ">= 7.3",
         "phpspec/phpspec": "^6.0 || ^7.0",
-        "phpunit/php-code-coverage": "^9.2 || ^10.0"
+        "phpunit/php-code-coverage": "^9.2 || ^10.0 || ^11.0",
+        "phpunit/php-file-iterator": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.5",
